--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@ amzn_assoc_design = "in_content";
 <h1><span style="text-decoration: underline;">Featured Games</span></h1>
 
 
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Chess_Icon.png/768px-Chess_Icon.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Chess<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Chess Now</p>
+    <a href="./sites/chess.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/ass.png" class="card-img-top" alt="...">
   <div class="card-body">
