--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ amzn_assoc_design = "in_content";
   <div class="card-body">
     <h5 class="card-title">Chess<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Chess Now</p>
-    <a href="https://unblocked-x.com/sites/chess" class="btn btn-primary" target="_blank">Play Now</a>
+    <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
