--- a/Sites/chessgames/index.html
+++ b/Sites/chessgames/index.html
@@ -30,10 +30,12 @@ ga('send', 'pageview');
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
+  
+  <link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Chess_Icon.png/768px-Chess_Icon.png"/>
 
   <meta charset="utf-8">
 
-  <title>Chess AI</title>
+  <title>Chess VS Computer</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
