--- a/Sites/chessgames/index.html
+++ b/Sites/chessgames/index.html
@@ -36,8 +36,8 @@ ga('send', 'pageview');
   <meta charset="utf-8">
 
   <title>Chess VS Computer</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Unblocked-X Chess Game">
+  <meta name="author" content="Unblocked">
 
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
