--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 
+	
 <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com"]});</script>
 
 <!-- Hotjar Tracking Code for https://unblocked-x.com -->
@@ -32,6 +33,10 @@ ga('send', 'pageview');
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
 <title>Unblocked-X</title>
+	<meta name="description" content="Unblocked Games">
+  <meta name="author" content="Unblocked-X">
+	
+	
 <link rel="shortcut icon" type="image/png" href="./Assets/image.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
