--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@ amzn_assoc_design = "in_content";
     <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+
+<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://icons.iconarchive.com/icons/aha-soft/chess/256/chess-board-icon.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Cheap AI Chess<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play CAIC Now</p>
+    <a href="https://unblocked-x.com/sites/chessgames2/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
 		
 		
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
