--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@ amzn_assoc_design = "in_content";
 
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Chess_Icon.png/768px-Chess_Icon.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Chess<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play Chess Now</p>
-    <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://icons.iconarchive.com/icons/aha-soft/chess/256/chess-board-icon.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Cheap AI Chess<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play CAIC Now</p>
+    <h5 class="card-title">Classic Chess<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play CC Now</p>
     <a href="https://unblocked-x.com/sites/chessgames2/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Chess_Icon.png/768px-Chess_Icon.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Eat The King Chess<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play ETKC Now</p>
+    <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
