--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ amzn_assoc_design = "in_content";
 
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://icons.iconarchive.com/icons/aha-soft/chess/256/chess-board-icon.png" class="card-img-top" alt="...">
+  <img src="https://i.pinimg.com/originals/5e/45/c3/5e45c3f6445fba750c3b4776c7a298fb.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Classic Chess<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play CC Now</p>
