--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@ amzn_assoc_design = "in_content";
 <p>&nbsp;</p>
 <h1><span style="text-decoration: underline;">Featured Games</span></h1>
 
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://play-lh.googleusercontent.com/awnMYM2mV5wCu3O40zKhvCi9jxgdwlimYpISaIof2CynLspnWtvPYitjJFi8ytl9-Q" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Solitaire<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Solitaire Now</p>
+    <a href="https://unblocked-x.com/sites/games/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://shots.codepen.io/fleemaja/pen/rzeEWE-1280.jpg?version=1502988783" class="card-img-top" alt="...">
