--- a/index.html
+++ b/index.html
@@ -167,23 +167,11 @@ amzn_assoc_design = "in_content";
 
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://i.ytimg.com/vi/bTk6dcAckuI/maxresdefault.jpg" class="card-img-top" alt="...">
+  <img src="./Assets/DWrTOz.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Tilting Maze Game<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play TMG Now</p>
-    <a href="https://unblocked-x.com/sites/tiltingmaze/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
-		
-		
-		
-		
-		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://shots.codepen.io/ste-vg/pen/ppLQNW-800.jpg?version=1517247708" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Tower Blocks<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play TB Now</p>
-    <a href="https://unblocked-x.com/sites/towerblocks/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+    <h5 class="card-title">The Last Lighthouse<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play TLL Now</p>
+    <a href="https://v6p9d9t4.ssl.hwcdn.net/html/4012895/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
@@ -233,6 +221,27 @@ amzn_assoc_design = "in_content";
     <h5 class="card-title">Eat The King Chess<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play ETKC Now</p>
     <a href="https://unblocked-x.com/sites/chessgames/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://i.ytimg.com/vi/bTk6dcAckuI/maxresdefault.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Tilting Maze Game<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play TMG Now</p>
+    <a href="https://unblocked-x.com/sites/tiltingmaze/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
+		
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://shots.codepen.io/ste-vg/pen/ppLQNW-800.jpg?version=1517247708" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Tower Blocks<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play TB Now</p>
+    <a href="https://unblocked-x.com/sites/towerblocks/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
