--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@ amzn_assoc_design = "in_content";
 
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://codersblock.com/assets/images/blog/align-4-v3.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Align 4<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Align 4 Now</p>
+    <a href="https://unblocked-x.com/sites/project000001352/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
+		
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://images2.fanpop.com/image/photos/8700000/Minesweeper-minesweeper-8780126-233-233.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Minesweeper<span class="badge bg-secondary">New</span> </h5>
