--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	
-<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com", "live-chess-2.ducks-shitposts.repl.co"]});</script>
+<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com","repl.co"]});</script>
 
 <!-- Hotjar Tracking Code for https://unblocked-x.com -->
 <script>
