--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ amzn_assoc_design = "in_content";
     <h5 class="card-title">Online Chess<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Online Chess Now</p>
     <a href="https://live-chess-2.ducks-shitposts.repl.co/" class="btn btn-primary" target="_blank">Play Now</a>
+	  <a href="https://chess-server.ducks-shitposts.repl.co/" class="btn btn-primary" target="_blank">Start Server</a>
   </div>
 </div>
 		
