--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@ amzn_assoc_design = "in_content";
 <h1><span style="text-decoration: underline;">Featured Games</span></h1>
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://cdn2.iconfinder.com/data/icons/artificial-intelligence-77/100/tactical-ai-3-artificial-intelligence-ai-logic-analysis-machine-learning-robot-arm-game-chess-512.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Smart Chess AI<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play SCAI Now</p>
+    <a href="https://unblocked-x.com/sites/chess-ai-main/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://images.unsplash.com/photo-1588412079929-790b9f593d8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2hlc3N8ZW58MHx8MHx8&w=1000&q=80" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Online Chess<span class="badge bg-secondary">New</span> </h5>
