--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ footer {
         <li class="nav-item">
           <a class="nav-link" style="color:white" href="./sites/chat.html">Chat</a>
         </li>
+		
+		<li class="nav-item">
+          <a class="nav-link" style="color:white" href="./sites/privacy.html">Privacy Policy</a>
+        </li>
       </ul>
     </div>
   </nav>
