--- a/Sites/privacy.html
+++ b/Sites/privacy.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
 
-	
-<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com","repl.co"]});</script>
 
 <!-- Hotjar Tracking Code for https://unblocked-x.com -->
 <script>
@@ -37,7 +35,7 @@ ga('send', 'pageview');
   <meta name="author" content="Unblocked-X">
 	
 	
-<link rel="shortcut icon" type="image/png" href="./Assets/image.png"/>
+<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,21 +118,6 @@ footer {
         <li class="nav-item active">
           <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/contactus.html">Contact Us</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/Services.html">Services</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/chat.html">Chat</a>
-        </li>
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/privacy.html">Privacy Policy</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -142,9 +125,6 @@ footer {
 
 <section class="rounded">
 	<article>
-    <h1>Privacy Policy</h1>
-    <p>&nbsp;</p>
-	
     <h1>Privacy Policy</h1>
 <p>Last updated: June 06, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
