--- a/Sites/privacy.html
+++ b/Sites/privacy.html
@@ -46,11 +46,11 @@ ga('send', 'pageview');
 
 <nav class="navbar navbar-default"> </nav>
 	
-body, h1, h2, h3, h4, h5, h6, a{
+body, h1, h2, h3, h4, h5, h6, a, p, li{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, a, p{
+h1, h2, h3, h4, h5, h6, a, p, li{
   color:white;
 }
 
