--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@ footer {
 
 <p>&nbsp;</p>
 <h1><span style="text-decoration: underline;">Featured Games</span></h1>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="6167326010"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://cdn2.iconfinder.com/data/icons/artificial-intelligence-77/100/tactical-ai-3-artificial-intelligence-ai-logic-analysis-machine-learning-robot-arm-game-chess-512.png" class="card-img-top" alt="...">
