--- a/index.html
+++ b/index.html
@@ -311,7 +311,17 @@ footer {
 		
 		<p>&nbsp;</p>
 <h1><span style="text-decoration: underline;">More Games</span></h1>
-<p>&nbsp;</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="6167326010"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/ass.png" class="card-img-top" alt="...">
@@ -621,6 +631,18 @@ footer {
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5082713/Shepherd/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="6167326010"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
   </article>
