--- a/Sites/privacy.html
+++ b/Sites/privacy.html
@@ -125,6 +125,19 @@ footer {
 
 <section class="rounded">
 	<article>
+		
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="8259400219"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		
     <h1>Privacy Policy</h1>
 <p>Last updated: June 06, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
