--- a/Sites/contactus.html
+++ b/Sites/contactus.html
@@ -123,6 +123,17 @@ footer {
 	<article>
     <h1>Contact Us</h1>
     <h1>You can contact us by email at: info@unblocked-x.com</h1>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="8259400219"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <div class="card" style="width: 18rem;display:inline-block;">
   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" class="card-img-top" alt="...">
