--- a/Sites/privacy.html
+++ b/Sites/privacy.html
@@ -129,11 +129,13 @@ footer {
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
+<!-- horizon -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="8259400219"></ins>
+     data-ad-slot="4703298580"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -326,6 +328,19 @@ footer {
 <ul>
 <li>By email: info@unblocked-x.com</li>
 </ul>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- horizon -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="4703298580"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
     
   </article>
