--- a/Sites/Services.html
+++ b/Sites/Services.html
@@ -120,18 +120,21 @@ footer {
 <!-- Page Content -->
 
 <section class="rounded">
-	<article>
-    <h1>Services</h1>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
+<!-- horizon -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="autorelaxed"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="8259400219"></ins>
+     data-ad-slot="4703298580"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+	
+	<article>
+    <h1>Services</h1>
 		
 		
     <div class="card" style="width: 18rem;display:inline-block;">
