--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -34,7 +34,7 @@ ga('send', 'pageview');
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Chess_Icon.png/768px-Chess_Icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/bP.png"/>
   <title>Chess</title>
     
 </head>
