--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -43,5 +43,19 @@ ga('send', 'pageview');
   <iframe src="https://live-chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- HORIZ3 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="2132728146"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+  
 </body>
 </html>
