--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -40,10 +40,11 @@ ga('send', 'pageview');
 </head>
 
 <body>
-  <iframe src="https://live-chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+  <iframe src="https://live-chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
     Your browser doesn't support iframes
-    
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+</iframe>
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
 <!-- HORIZ3 -->
 <ins class="adsbygoogle"
@@ -55,10 +56,6 @@ ga('send', 'pageview');
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    
-</iframe>
-  
-  
   
 </body>
 </html>
