--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -46,13 +46,12 @@ ga('send', 'pageview');
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<!-- HORIZ3 -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-f1+5r+5a-db+57"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="2132728146"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="5469337922"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
