--- a/index.html
+++ b/index.html
@@ -440,7 +440,18 @@ footer {
 </div>
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- HORIZ3 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="2132728146"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 		
@@ -588,6 +599,19 @@ footer {
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/5409129/webgl/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- HORIZ3 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="2132728146"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
