--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
 	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64M06TK53B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64M06TK53B');
+</script>
+	
+	
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0ac4c8494244b7bc19b82d32d/232914cc9c9bc4dcb2fe840cf.js");</script>
 	
 <!-- Hotjar Tracking Code for https://unblocked-x.com -->
