--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer {
 </style>
 </head>
 <body style="visibility: hidden !important;">
-	<div id="babasbmsgx" style="visibility: visible !important; color:white;">Please disable your adblock and script blockers to view this page</div>
+	<div id="babasbmsgx" style="visibility: visible !important; color:white;">Please disable your javascript blockers to view this page</div>
 	
 	<nav class="navbar navbar-expand-lg navbar-light bg-black">
     <a class="navbar-brand" style="color:white">Unblocked</a>
