--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-64M06TK53B"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FV7FK089BE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-64M06TK53B');
+  gtag('config', 'G-FV7FK089BE');
 </script>
 	
 	
