--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@ footer {
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 		
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://images.crazygames.com/games/soccer-skills/cover-1621671099808.png?auto=format,compress&q=75&cs=strip&ch=DPR&w=1200&h=630&fit=crop" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Soccer Skills Game - Eurocup Edition<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play SSG - EE Now</p>
+    <a href="https://unblocked-x.com/sites/eurocup.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://cdn2.iconfinder.com/data/icons/artificial-intelligence-77/100/tactical-ai-3-artificial-intelligence-ai-logic-analysis-machine-learning-robot-arm-game-chess-512.png" class="card-img-top" alt="...">
