--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ footer {
 		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://images.crazygames.com/games/soccer-skills/cover-1621671099808.png?auto=format,compress&q=75&cs=strip&ch=DPR&w=1200&h=630&fit=crop" class="card-img-top" alt="...">
+  <img src="https://unblocked-x.com/Assets/cover-1621671099808.avif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Soccer Skills Game - Eurocup Edition<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play SSG - EE Now</p>
