--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<title>Unblocked-X</title>
+<title>Unblocked X: 2022</title>
 	<meta name="description" content="Unblocked Games">
   <meta name="author" content="Unblocked-X">
 	
