--- a/index.html
+++ b/index.html
@@ -120,13 +120,6 @@ footer {
         <li class="nav-item active">
           <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/contactus.html">Contact Us</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/Services.html">Services</a>
-        </li>
 
         <li class="nav-item">
           <a class="nav-link" style="color:white" href="./sites/chat.html">Chat</a>
@@ -146,6 +139,7 @@ footer {
 	<p>Unblocked-X is a game library, filled with unblocked games for public/school networks, with a great moderation and developper team. Unblocked-x is made for people  whose networks block games websites. These games include popular titles like "Friday Night Funkin". To play these games, you simply have to watch a 5 second adfoc.us ad, and you can play the game after that. All of the games in this library are safe, as they are sourced from itch.io, a popular games website. More games will be added progressively. Enjoy the free games!</p>
 		<p>Unblocked access to the best free games from all over the world. Enjoy the most popular games for free with no restrictions, you will be able to play it from any country.</p>
 	<p>- The Dev Team</p>
+		<p>You can contact us here: info@unblocked-x.com</p>
 		
 		
 
