--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta name="description" content="Unblocked Games">
   <meta name="author" content="Unblocked-X">
 	
-<link href='https://fonts.googleapis.com/css?family=Lilita One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 <link rel="shortcut icon" type="image/png" href="./Assets/image.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
@@ -47,7 +47,7 @@
 <nav class="navbar navbar-default"> </nav>
 	
 body, h1, h2, h3, h4, h5, h6, a{
-  font-family: Lilita One;
+  font-family: Oswald;
 }
 
 h1, h2, h3, h4, h5, h6, a, p{
@@ -55,7 +55,7 @@ h1, h2, h3, h4, h5, h6, a, p{
 }
 
 body {
-  font-family: Lilita One;
+  font-family: Oswald;
 	background-color: #000;
 }
 
