--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer {
 		
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://cdn2.iconfinder.com/data/icons/artificial-intelligence-77/100/tactical-ai-3-artificial-intelligence-ai-logic-analysis-machine-learning-robot-arm-game-chess-512.png" class="card-img-top" alt="...">
+  <img src="https://www.kindpng.com/picc/m/292-2921633_chess-chess-icons-shah-of-persian-king-transparent.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Smart Chess AI<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play SCAI Now</p>
