--- a/forum.html
+++ b/forum.html
@@ -32,8 +32,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/bP.png"/>
-  <title>Chess</title>
+    <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
+  <title>UBX FRM</title>
     
 </head>
 
