--- a/forum.html
+++ b/forum.html
@@ -34,13 +34,12 @@
 
     <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
   <title>UBX FRM</title>
+  <meta http-equiv = "refresh" content = "1; url = https://chansite2.ducks-shitposts.repl.co/" />
     
 </head>
 
 <body>
-  <iframe src="https://chansite2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
-    Your browser doesn't support iframes
-</iframe>
+  <p>Redirecting..</p>
   
 </body>
 </html>
