--- a/forum.html
+++ b/forum.html
@@ -34,6 +34,11 @@
 
     <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
   <title>UBX FRM</title>
+  
+  <meta name="description" content="An Unblocked Forum to chat with users!">
+  <meta name="author" content="UBX FRM">
+  
+  
   <meta http-equiv = "refresh" content = "1; url = https://chansite2.ducks-shitposts.repl.co/" />
     
 </head>
