--- a/forum.html
+++ b/forum.html
@@ -38,13 +38,14 @@
   <meta name="description" content="An Unblocked Forum to chat with users!">
   <meta name="author" content="UBX FRM">
   
-  
-  <meta http-equiv = "refresh" content = "1; url = https://chansite2.ducks-shitposts.repl.co/" />
     
 </head>
 
 <body>
-  <p>Redirecting..</p>
+  
+  <iframe src="https://chansite2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
+    Your browser doesn't support iframes
+</iframe>
   
 </body>
 </html>
