--- a/forum.html
+++ b/forum.html
@@ -32,11 +32,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
-  <title>UBX FRM</title>
+    <link rel="shortcut icon" type="image/png" href="https://chansite2.ducks-shitposts.repl.co/favicon.ico"/>
+  <title>34chan</title>
   
   <meta name="description" content="An Unblocked Forum to chat with users!">
-  <meta name="author" content="UBX FRM">
+  <meta name="author" content="34chan">
   
     
 </head>
