--- a/34chan.html
+++ b/34chan.html
@@ -35,7 +35,7 @@
     <link rel="shortcut icon" type="image/png" href="https://chansite2.ducks-shitposts.repl.co/favicon.ico"/>
   <title>34chan</title>
   
-  <meta name="description" content="An Unblocked Forum to chat with users!">
+  <meta name="description" content="34chan is a simple image-based bulletin board where anyone can post comments and share images. Users do not need to register an account before participating in the community.">
   <meta name="author" content="34chan">
   
     
