--- a/34chan.html
+++ b/34chan.html
@@ -38,14 +38,13 @@
   <meta name="description" content="34chan is a simple image-based bulletin board where anyone can post comments and share images. Users do not need to register an account before participating in the community.">
   <meta name="author" content="34chan">
   
+  <meta http-equiv = "refresh" content = "1; url = https://chansite2.ducks-shitposts.repl.co/" />
     
 </head>
 
 <body>
   
-  <iframe src="https://chansite2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
-    Your browser doesn't support iframes
-</iframe>
+  <p>Redirecting...</p>
   
 </body>
 </html>
