--- a/34chan.html
+++ b/34chan.html
@@ -38,7 +38,7 @@
   <meta name="description" content="34chan is a simple image-based bulletin board where anyone can post comments and share images. Users do not need to register an account before participating in the community.">
   <meta name="author" content="34chan">
   
-  <meta http-equiv = "refresh" content = "1; url = https://chansite2.ducks-shitposts.repl.co/" />
+  <meta http-equiv = "refresh" content = "1; url = https://34chan.000webhostapp.com/" />
     
 </head>
 
