--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@ footer {
 		<li class="nav-item">
           <a class="nav-link" style="color:white" href="./sites/privacy.html">Privacy Policy</a>
         </li>
+		
+		<li class="nav-item">
+          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/dashboard.html">Backup Site</a>
+        </li>
+		
+		<li class="nav-item">
+          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/">34chan</a>
+        </li>
+		
       </ul>
     </div>
   </nav>
