--- a/Sites/Jerry/jerryexecutor.html
+++ b/Sites/Jerry/jerryexecutor.html
@@ -34,7 +34,7 @@ ga('send', 'pageview');
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: [""]});</script>
+<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: [], blacklist: ["unblocked-x.com","linkvertise.com"]});</script>
 <style>
 * {
   box-sizing: border-box;
