--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <iframe src="https://live-chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
+  <iframe src="https://chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
     Your browser doesn't support iframes
 </iframe>
   
