--- a/Sites/chess.html
+++ b/Sites/chess.html
@@ -34,13 +34,14 @@
 
     <link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/bP.png"/>
   <title>Chess</title>
+  
+  <meta http-equiv="refresh" content="1; url='https://chess-2.ducks-shitposts.repl.co'" />
     
 </head>
 
 <body>
-  <iframe src="https://chess-2.ducks-shitposts.repl.co/" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
-    Your browser doesn't support iframes
-</iframe>
+  <b>Redirecting...</b>
+  <b>Click <a href="https://chess-2.ducks-shitposts.repl.co">here</a> if it doesn't redirect you.</b>
   
 </body>
 </html>
