--- a/Sites/chess-ai-main/index.html
+++ b/Sites/chess-ai-main/index.html
@@ -66,7 +66,7 @@
             integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
             crossorigin="anonymous">
         
-        <script defer src="https://chansite2.ducks-shitposts.repl.co/chess-ai-main/js/chessboard-1.0.0.min.js"
+        <script defer src="https://unblocked-x.com/sites/chess-ai-main/js/chessboard-1.0.0.min.js"
             integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
             crossorigin="anonymous"></script>
 
