--- a/luaint.html
+++ b/luaint.html
@@ -144,7 +144,7 @@ footer {
 </section>
 
 <footer>
-  <p>© Unblocked-X, 2022 - All rights reserved</p>
+  <p>© LuaInt, 2022 - All rights reserved</p>
 </footer>
 
 </body>
