--- a/luaint.html
+++ b/luaint.html
@@ -28,12 +28,12 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
-<title>Unblocked-X</title>
-	<meta name="description" content="Unblocked Games">
-  <meta name="author" content="Unblocked-X">
+<title>LuaInt</title>
+	<meta name="description" content="LuaInt is a simple, fast and effective lua interpreter written in C# and powered by MoonSharp.">
+  <meta name="author" content="LuaInt">
 	
 	
-<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Assets/image.png"/>
+<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Lua-Logo.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
