--- a/luaint.html
+++ b/luaint.html
@@ -29,7 +29,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
 <title>LuaInt</title>
-	<meta name="description" content="LuaInt is a simple, fast and effective lua interpreter written in C# and powered by MoonSharp.">
+	<meta name="description" content="LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.">
   <meta name="author" content="LuaInt">
 	
 	
@@ -124,6 +124,7 @@ footer {
 </script>
 		
     <h1 style="text-align: center;">The LuaInt Lua Interpreter</h1>
+		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
