--- a/luaint.html
+++ b/luaint.html
@@ -125,6 +125,7 @@ footer {
 		
     <h1 style="text-align: center;">The LuaInt Lua Interpreter</h1>
 		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
+		<p style="text-align: center;"><b>without requiring admin</b></p>
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
