--- a/luaint.html
+++ b/luaint.html
@@ -126,6 +126,9 @@ footer {
     <h1 style="text-align: center;">The LuaInt Lua Interpreter</h1>
 		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
 		<p style="text-align: center;"><b>without requiring admin</b></p>
+	
+<h1>Downloads</h1>
+<a href="url">link text</a>
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
