--- a/luaint.html
+++ b/luaint.html
@@ -128,7 +128,7 @@ footer {
 		<p style="text-align: center;"><b>without requiring admin</b></p>
 	
 <h1>Downloads</h1>
-<a href="url">link text</a>
+<a href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
