--- a/luaint.html
+++ b/luaint.html
@@ -112,7 +112,8 @@ footer {
     <h1 style="text-align: center;">The LuaInt Lua Interpreter</h1>
 		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
 		<p style="text-align: center;"><b>without requiring admin</b></p>
-	
+		<b style="text-align: center;"><a href="https://www.moonsharp.org/">MoonSharp Documentation</a> • <a href="http://www.lua.org/manual/5.2/">Lua Documentation</a></b>
+		
 <h1>Downloads</h1>
 <a href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
 		
