--- a/luaint.html
+++ b/luaint.html
@@ -44,11 +44,11 @@
 
 <nav class="navbar navbar-default"> </nav>
 	
-body, h1, h2, h3, h4, h5, h6, a, p, li{
+body, h1, h2, h3, h4, h5, h6, a, p, li, bold{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, a, p, li{
+h1, h2, h3, h4, h5, h6, a, p, li, bold{
   color:white;
 }
 
