--- a/luaint.html
+++ b/luaint.html
@@ -111,9 +111,13 @@ footer {
 		<p style="text-align: center;"><b>without requiring admin</b></p>
 		<p style="text-align: center;"><a style="text-align: center;" href="https://www.moonsharp.org/">MoonSharp Documentation</a> • <a style="text-align: center;" href="http://www.lua.org/manual/5.2/">Lua Documentation</a></p>
 		
+		
+		
 <h1>Downloads</h1>
 <a href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
-    
+		
+<h1>Links</h1>
+<a href="https://discord.gg/wpgkJ3dJxe">Our Discord</a>
     
   </article>
   
