--- a/luaint.html
+++ b/luaint.html
@@ -115,7 +115,8 @@ footer {
 		
 <h1>Downloads</h1>
 <a href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
-		
+<p>&nbsp;</p>
+<p>&nbsp;</p>		
 <h1>Links</h1>
 <a href="https://discord.gg/wpgkJ3dJxe">Our Discord</a>
     
