--- a/luaint.html
+++ b/luaint.html
@@ -113,12 +113,12 @@ footer {
 		
 		
 		
-<h1>Downloads</h1>
-<a href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
-<p>&nbsp;</p>
-<p>&nbsp;</p>		
-<h1>Links</h1>
-<a href="https://discord.gg/wpgkJ3dJxe">Our Discord</a>
+<h1 style="text-align: center;">Downloads</h1>
+<a style="text-align: center;" href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
+<p style="text-align: center;" >&nbsp;</p>
+<p style="text-align: center;" >&nbsp;</p>		
+<h1 style="text-align: center;" >Links</h1>
+<a style="text-align: center;" href="https://discord.gg/wpgkJ3dJxe">Our Discord</a>
     
   </article>
   
