--- a/luaint.html
+++ b/luaint.html
@@ -48,6 +48,10 @@ body, h1, h2, h3, h4, h5, h6, a, p, li, bold{
 h1, h2, h3, h4, h5, h6, a, p, li, bold{
   color:white;
 }
+	
+	a {
+  text-align:center;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
