--- a/luaint.html
+++ b/luaint.html
@@ -118,11 +118,11 @@ footer {
 		
 		
 <h1 style="text-align: center;">Downloads</h1>
-<a style="text-align: center;" href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a>
+<p style="text-align: center;"><a style="text-align: center;" href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a></p>
 <p style="text-align: center;" >&nbsp;</p>
 <p style="text-align: center;" >&nbsp;</p>		
 <h1 style="text-align: center;" >Links</h1>
-<a style="text-align: center;" href="https://discord.gg/wpgkJ3dJxe">Our Discord</a>
+<p style="text-align: center;"><a style="text-align: center;" href="https://discord.gg/wpgkJ3dJxe">Our Discord</a></p>
     
   </article>
   
