--- a/luaint.html
+++ b/luaint.html
@@ -110,7 +110,7 @@ footer {
 <section class="rounded">
 	<article>
 		
-    <p style="text-align: center;><img src="https://unblocked-x.com/Lua-Logo.png" alt="lua" width="90" height="90" /></p> <h1 style="text-align: center;">The LuaInt Lua Interpreter</h1>
+ <h1 style="text-align: center;"> <img src="https://unblocked-x.com/Lua-Logo.png" alt="lua" width="90" height="90" /> The LuaInt Lua Interpreter</h1>
 		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
 		<p style="text-align: center;"><b>without requiring admin</b></p>
 		<p style="text-align: center;"><a style="text-align: center;" href="https://www.moonsharp.org/">MoonSharp Documentation</a> • <a style="text-align: center;" href="http://www.lua.org/manual/5.2/">Lua Documentation</a></p>
