--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ footer {
     <p class="card-text">Play Online Chess Now</p>
     <a href="https://unblocked-x.com/sites/chess" class="btn btn-primary" target="_blank">Play Now</a>
 	  <a href="https://chess-server.ducks-shitposts.repl.co/" class="btn btn-primary" target="_blank">Start Server</a>
+	  <a href="https://unblocked-x.com/startrepl.exe" class="btn btn-primary" target="_blank">Download Server Starter</a>
   </div>
 </div>
 		
