--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	
+	<script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(383595, {whitelist: ["v6p9d9t4.ssl.hwcdn.net"], blacklist: []});</script>
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FV7FK089BE"></script>
 <script>
