--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ footer {
         </li>
 		
 		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/">34chan</a>
+          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/">bpforum</a>
         </li>
 		
       </ul>
