--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ footer {
   <div class="card-body">
     <h5 class="card-title">DOOM<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Doom Now</p>
-    <a href="https://unblocked-x.com/sites/jsdoom/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+    <p class="btn btn-primary">Coming Soon</p>
   </div>
 </div>
 		
