--- a/index.html
+++ b/index.html
@@ -705,9 +705,10 @@ footer {
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-format="autorelaxed"
+     data-ad-format="fluid"
+     data-ad-layout-key="-fb+5w+4e-db+86"
      data-ad-client="ca-pub-1316476333141866"
-     data-ad-slot="8259400219"></ins>
+     data-ad-slot="6167326010"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
