--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
-     crossorigin="anonymous"></script>
 <title>Unblocked X: 2022</title>
 	<meta name="description" content="Unblocked Games">
   <meta name="author" content="Unblocked-X">
@@ -254,6 +250,16 @@ footer {
   </div>
 </div>
 		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -327,6 +333,16 @@ footer {
   </div>
 </div>
 
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://i.pinimg.com/originals/5e/45/c3/5e45c3f6445fba750c3b4776c7a298fb.gif" class="card-img-top" alt="...">
@@ -355,7 +371,16 @@ footer {
   </div>
 </div>
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -394,6 +419,17 @@ footer {
   </div>
 </div>
 
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -435,7 +471,16 @@ footer {
 </div>
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -457,7 +502,16 @@ footer {
 </div>
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -581,7 +635,16 @@ footer {
 </div>
 
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 
@@ -615,7 +678,16 @@ footer {
 		
 		
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		
 		
 
