--- a/index.html
+++ b/index.html
@@ -216,7 +216,16 @@ footer {
   </div>
 </div>
 		
-		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://www.kindpng.com/picc/m/292-2921633_chess-chess-icons-shah-of-persian-king-transparent.png" class="card-img-top" alt="...">
@@ -536,6 +545,17 @@ footer {
   </div>
 </div>
 		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/blastcity.png" class="card-img-top" alt="...">
   <div class="card-body">
@@ -680,6 +700,17 @@ footer {
     <a href="https://v6p9d9t4.ssl.hwcdn.net/html/4924354/_wvy__clr__sleepi_boi_can_t_sleep_final/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="./Assets/wordl.gif" class="card-img-top" alt="...">
@@ -711,7 +742,16 @@ footer {
 		
 		
 		
-		
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
