--- a/Sites/chat.html
+++ b/Sites/chat.html
@@ -142,6 +142,16 @@
     <div class="label">Connected users</div>
     <div class="members-count" style="color:white">-</div>
   <div class="members-list">-</div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:200px;height:200px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="5401571429"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </div>
   <div class="right">
     <div class="chat-title" style="color:white; background-color:black;">Global public room</div>
