--- a/index.html
+++ b/index.html
@@ -153,7 +153,18 @@ footer {
 	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
 				
+<h1><span style="text-decoration: underline;">Recommended Games</span></h1>
+		<p>&nbsp;</p>
 
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3V97V1YlNI_4XoKLR6IUrFdAa4YT5fI7ih2S4NhSt4v6INhC2383WehGBOqFs8g82NE&usqp=CAU" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Chess AI<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play CAI Now</p>
+    <a href="https://unblocked-x.com/sites/chess-ai-main/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
 <p>&nbsp;</p>
 <h1><span style="text-decoration: underline;">Featured Games</span></h1>
 		
@@ -218,14 +229,7 @@ footer {
 		
 	
 
-		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://www.kindpng.com/picc/m/292-2921633_chess-chess-icons-shah-of-persian-king-transparent.png" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Smart Chess AI<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play SCAI Now</p>
-    <a href="https://unblocked-x.com/sites/chess-ai-main/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
+		
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
