--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ footer {
 		<p>&nbsp;</p>
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP3V97V1YlNI_4XoKLR6IUrFdAa4YT5fI7ih2S4NhSt4v6INhC2383WehGBOqFs8g82NE&usqp=CAU" class="card-img-top" alt="...">
+  <img src="https://unblocked-x.com/assets/cai.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Chess AI<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play CAI Now</p>
